--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Bombergame</title>
+	<script src="modelo.js"></script>
 </head>
 <body>
+
+	<script>
+		
+		juego = new Juego();
+
+	</script>
 
 </body>
 </html>
