--- a/cliente/index.html
+++ b/cliente/index.html
@@ -22,6 +22,7 @@
   <div class="row">
     <div id='inicio'></div>
     <div id='bienvenida'></div>
+    <div id='partidas'></div>
   </div>
 </div>
 <script>
